--- a/index.qmd
+++ b/index.qmd
@@ -50,7 +50,7 @@ This page provides additional visual material that supports and expands upon the
 <br>
 
 |  |  |
-|----|----|
+|------------------------------------|------------------------------------|
 | ![50/95 UD Day](images/clipboard-1137141596.gif){width="317"} | ![50/95 UD Night](images/clipboard-2608811719.gif){width="317"} |
 
 Viz 1: The images shows a rotating view to display the 3D Utilization Distribution (UD), ilustrating significant differences between day and night periods for one of the tagged sea turtles [(]{.underline}*organismID* #200043) \[see **Figure 3** e-f in the main text\].
@@ -62,7 +62,7 @@ Viz 1: The images shows a rotating view to display the 3D Utilization Distributi
 <br>
 
 |  |  |
-|----|----|
+|------------------------------------|------------------------------------|
 | ![95 UD Day overlap with Drifting Longlines (LL) fishing](images/clipboard-3971708517.gif){width="330"} | ![95 UD Day overlap with Trawlers (TW) fishing](results/3d_95UD_TW_fishing_overlap_day.gif){width="331"} |
 | ![95 UD Night overlap with Drifting Longlines (LL) fishing](results/3d_95UD_LL_fishing_overlap_night.gif){width="331"} | ![95 UD Night overlap with Trawlers (TW) fishing](results/3d_95UD_TW_fishing_overlap_night.gif){width="331"} |
 
@@ -76,15 +76,13 @@ Viz 2: The images show a rotating view of the 3D UDS to illustrate spatial overl
 
 Copyright ^(c)^ 2025 · MIT License
 
-Page and DataViz by Javier Menéndez-Blázquez
+DataViz and site by
 
-@jmenblaz <a href="https://github.com/jmenblaz"><img src="images/github-mark.svg" alt="GitHub logo" width="22" height="23"/></a> <a href="https://www.linkedin.com/in/jmenendezblazquez/"><img src="images/linkedin_short.svg" alt="Linkedin logo" width="22"/></a> <a href="https://bsky.app/profile/jmenblaz.bsky.social"><img src="images/bluesky.svg" alt="Bluesky logo" width="22" height="19"/></a>
+**Javier Menéndez-Blázquez** · @jmenblaz <a href="https://github.com/jmenblaz"><img src="images/github-mark.svg" alt="GitHub logo" width="22" height="23"/></a> <a href="https://www.linkedin.com/in/jmenendezblazquez/"><img src="images/linkedin_short.svg" alt="Linkedin logo" width="22"/></a> <a href="https://bsky.app/profile/jmenblaz.bsky.social"><img src="images/bluesky.svg" alt="Bluesky logo" width="22" height="19"/></a>
 
 ## Open Research
 
-All analyses were programed in R (v 4.4.1) (R Core Team [2024](https://onlinelibrary.wiley.com/doi/10.1111/faf.70017?af=R#faf70017-bib-0038)). Code and scripts generated are available from publication GitHub repository ([github.com/SpatialMarine/seaturtle_3dhomerange](https://github.com/SpatialMarine/seaturtle_3dhomerange); DOI: [10.5281/zenodo.15551823](https://doi.org/10.5281/zenodo.15551823))
-
-<a href="https://github.com/jmenblaz">![GitHub logo](images/github-mark.svg){alt="GitHub logo" width="22" height="22"}</a> .
+All analyses were programed in `R` (v 4.4.5) (R Core Team 2024). Code and scripts generated are available from publication GitHub repository ![GitHub logo](images/github-mark.svg){alt="GitHub logo" width="22" height="22"} [github.com/SpatialMarine/seaturtle_3dhomerange](https://github.com/SpatialMarine/seaturtle_3dhomerange)
 
 ## Acknowledgements
 
