--- a/index.qmd
+++ b/index.qmd
@@ -31,7 +31,7 @@ p {
 </style>
 ```
 
-## Seaturtle homerange 🐢
+## 3D Diel Utilization Distribution: a novel perspective to understand marine turtle-fishery interaction
 
 ### Abstract
 
